# CICD

./: .bazelrc  .clang-tidy  .gitignore  BUILD.bazel  DOCS_BAZEL_GUIDE.md  MODULE.bazel  README.md  STRUCTURE.md  calculator.cc  calculator.h  calculator_test.cc  main.cc
.github/workflows/: bazel-ci.yml  clang-tidy.yml  codeql.yml  coverage.yml  docs-pages.yml  hello-world.yml  nightly-quality.yml
app/: cli_main.cc
docs/: .gitignore  BUILD.bazel  README.md  requirements_lock.txt  sphinx_rules.bzl
docs/sphinx/: BUILD.bazel  architecture.rst  building.rst  code_coverage.rst  conf.py  contributing.rst  dashboard.rst  development.rst  index.rst  introduction.rst  quality.rst  quick_start.rst  requirements.txt  testing.rst
docs/sphinx/_static/css/: default_custom.css
docs/tools/: BUILD.bazel  check_docs.sh  serve.py  sphinx_build.py  test_docs_build.sh
include/calculator/: calculator_service.h  i_calculator_service.h  operations.h
include/calculator/operations/: arithmetic_operations.h
quality/: BUILD.bazel  coverage.bazelrc
quality/clang_tidy/: BUILD.bazel  clang_tidy_wrapper.py  linters.bzl
quality/dashboard/: BUILD.bazel  generate_dashboard.py  requirements_lock.txt
quality/static_analysis/: BUILD.bazel  codeql_lint.py  config.yaml  static_analysis.bazelrc
scripts/: run-quality.sh
src/core/: calculator_service.cc
src/operations/: arithmetic_operations.cc
tests/unit/: calculator_service_test.cc
tools/lint/: BUILD.bazel  clang_tidy_wrapper.py  linters.bzl
